log
ju., 21 de abr. de 2022 11:30:05: 
 tests:  1|8
total_score: 0/70
77d06cb
ju., 21 de abr. de 2022 11:30:30: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:5: error: 'new' undeclared (first use in this function)
     new->lower_than = lower_than;
     ^~~
treemap.c:41:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6eb49f1
ju., 21 de abr. de 2022 11:30:41: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
9c4cc6f
ju., 21 de abr. de 2022 11:36:25: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|7
total_score: 10/70
5ba04cd
ju., 21 de abr. de 2022 11:40:40: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 10/70
0556f5a
ju., 21 de abr. de 2022 11:40:57: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
8afe502
ju., 21 de abr. de 2022 11:49:32: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:12: error: redefinition of 'newPair'
     Pair * newPair = searchTreeMap(tree, key);
            ^~~~~~~
treemap.c:49:12: note: previous definition of 'newPair' was here
     Pair * newPair = (Pair *) malloc (sizeof(Pair));
            ^~~~~~~
treemap.c:57:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tree->current = newPair;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
5e6f350
ju., 21 de abr. de 2022 11:50:06: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:12: error: redefinition of 'newPair'
     Pair * newPair = searchTreeMap(tree, key);
            ^~~~~~~
treemap.c:49:12: note: previous definition of 'newPair' was here
     Pair * newPair = (Pair *) malloc (sizeof(Pair));
            ^~~~~~~
Compilation failed
16468a0
ju., 21 de abr. de 2022 11:50:16: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
25952d1
ju., 21 de abr. de 2022 11:52:19: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
21050f6
ju., 21 de abr. de 2022 11:54:42: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:12: error: redefinition of 'aux'
     Pair * aux = searchTreeMap(tree, key);
            ^~~
treemap.c:49:12: note: previous definition of 'aux' was here
     Pair * aux = (Pair *) malloc (sizeof(Pair));
            ^~~
Compilation failed
505fa42
ju., 21 de abr. de 2022 11:54:49: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aa0a09f
ju., 21 de abr. de 2022 11:55:20: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b066c35
ju., 21 de abr. de 2022 11:58:41: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:59:27: error: 'newPair' undeclared (first use in this function)
     tree->current->pair = newPair;
                           ^~~~~~~
treemap.c:59:27: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:55:16: error: unused variable 'newNode' [-Werror=unused-variable]
     TreeNode * newNode = createTreeNode(key, value);
                ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9ca2453
ju., 21 de abr. de 2022 12:02:14: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|0
b26e74c
ju., 21 de abr. de 2022 12:05:13: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0c56e77
ju., 21 de abr. de 2022 12:06:40: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|6
total_score: 15/70
0a58eaf
